# odoo-json2

./: README.md  pyproject.toml  requirements.txt
odoo_json2/simple_json2/: json2_client.py  json2_connection.py
