[project]
name = "odoo-json2"
authors = [{name = "Joan A. Pinol  (japinol)"}]
version = "0.0.1"
classifiers = [
    "License :: MIT License",
]
requires-python=">=3.13"
dependencies = [
    "requests>=2.32.5,<3",
]

[project.optional-dependencies]
test = [
]

[project.urls]
Home = "https://github.com/japinol7/odoo-json2"
